# rdkit

Code/Mordred/: CMakeLists.txt  Mordred.cpp  Mordred.h
Code/Mordred/Wrap/: CMakeLists.txt  rdMordred.cpp  testMordred.py
Code/Mordred/testdata/: example.csv
